--- a/random.html
+++ b/random.html
@@ -8,35 +8,38 @@
 
 <body>
 
-RANDOM DESIGN CO.
+<header>
+<h2>Random Design Co.</h2>
+</header>
 
---
+<section>
+<h1>Be Random</h1>
 
-BE RANDOM
+<a href="#" class="buttom">Omg Yes!</a>
+</section>
 
-OMG YES!
+<section>
+<h2>About US</h2>
 
---
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nam non, explicabo
+cum inventore, molestiae fuga nulla repellendus architecto rerum nostrum at
+amet, officia eum quisquam earum ipsam similique ad!</p>
+</section>
 
-ABOUT US
+<section>
+<h2>LATEST WORK</h2>
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nam non, explicabo cum inventore, molestiae fuga nulla repellendus architecto rerum nostrum at amet, officia eum quisquam earum ipsam similique ad!
+<a href="#">PROJECT 1</a>
+<a href="#">PROJECT 2</a>
+<a href="#">PROJECT 3</a>
+<a href="#">PROJECT 5</a>
+<a href="#">PROJECT 6</a>
+<a href="#">PROJECT 7</a>
+</section>
 
---
-
-LATEST WORK
-
-PROJECT 1
-PROJECT 2
-PROJECT 3
-PROJECT 4
-PROJECT 5
-PROJECT 6
-PROJECT 7
-
---
-
-© 2016 Random Design Co.
+<footer>
+<p>© 2016 Random Design Co.</p>
+</footer>
 
 </body>
 </html>
